# multi-party-schnorr

./: Cargo.toml
src/: lib.rs
src/protocols/thresholdsig/: bitcoin_schnorr.rs  test_bitcoin.rs
